# gVRMod

./: .gitignore  CMakeLists.txt  LICENSE  README  build.sh  dev_setup.sh  install.sh  quick_test.sh  test.sh
addon/gvrmod/lua/vrmod/api/: cl_api.lua
addon/gvrmod/lua/vrmod/core/: cl_vrmod.lua  sh_startup.lua
addon/gvrmod/lua/vrmod/player/: cl_character_hands.lua
addon/gvrmod/lua/vrmod/ui/: cl_settings.lua
addon/gvrmod/lua/vrmod/utils/: cl_rendering.lua
src/core/: vrmod_common.h  vrmod_log.cpp  vrmod_log.h
src/input/: vr_input.cpp  vr_input.h  xr_input.cpp  xr_input.h
src/lua/: lua_interface.cpp
src/rendering/opengl/: gl_hooks.cpp  gl_hooks.h
src/rendering/openxr/: xr_render.cpp  xr_render.h  xr_session.cpp  xr_session.h
tests/: test_distortion.cpp  test_framework.h  test_input.cpp  test_lua.cpp  test_main.cpp
tests/mocks/: mock_lua.h  mock_pose.h
